--- a/pages/theReservationList/theReservationList.wxml
+++ b/pages/theReservationList/theReservationList.wxml
@@ -1,7 +1,8 @@
 <!--pages/theReservationList/theReservationList.wxml-->
-<text>pages/theReservationList/theReservationList.wxml</text>
-
-
+<i-card title="小花">
+    <view slot="content"> 提交时间： 2019-12-02</view>]
+    <view slot="content"> 审核结果： 正在审核</view>
+</i-card>
  <i-tab-bar current="{{current}}" color="#f759ab" fixed="true"  bindchange="handleChange" >
       <i-tab-bar-item  key="tosignup" icon="brush" size="45" current-icon="brush_fill" title="报名"></i-tab-bar-item>
       <i-tab-bar-item  key="theReservationList" icon="activity"  size="45" current-icon="activity_fill" title="预约列表"></i-tab-bar-item>
