--- a/pages/navigation/navigation.wxml
+++ b/pages/navigation/navigation.wxml
@@ -7,4 +7,5 @@
       <i-tab-bar-item  key="tosignup" icon="brush" size="45" current-icon="brush_fill" title="报名"></i-tab-bar-item>
       <i-tab-bar-item  key="theReservationList" icon="activity"  size="45" current-icon="activity_fill" title="预约列表"></i-tab-bar-item>
       <i-tab-bar-item   key="classInfo" icon="homepage"  size="45" current-icon="homepage_fill" title="分班信息"></i-tab-bar-item>
+      <i-tab-bar-item   key="setting" icon="setup"  size="45" current-icon="setup_fill" title="设置"></i-tab-bar-item>
   </i-tab-bar>
