--- a/pages/registered/registered.wxml
+++ b/pages/registered/registered.wxml
@@ -1,7 +1,7 @@
 <!--pages/registered/registered.wxml-->
 <form  bindsubmit="formSubmit">
   <i-panel>
-      <i-input value="" name="userName" title="用户名" placeholder="用户名" maxlength="15"/>
+      <i-input value="" name="account" title="用户名" placeholder="用户名" maxlength="15"/>
       <i-input value="" name="password" type="password" title="密码" placeholder="请输入密码" maxlength="15"/>
       <i-input value="" name="oldPassword" type="password" title="确认密码" placeholder="请确认密码" maxlength="15"/>
       <i-input value="" name="phone" title="手机号码" placeholder="手机号码" maxlength="11" />
