--- a/pages/setting/setting.wxml
+++ b/pages/setting/setting.wxml
@@ -17,16 +17,17 @@
  <i-cell-group>
     <i-cell title="修改密码" bindtap="editPassword"></i-cell>
     <form  bindsubmit="formSubmit">
-      <view wx:if="{{passwordView}}">
-        <i-input value="" name="newPassword" title="新密码" placeholder="请输入密码" maxlength="15"/>
-      <button type="primary" form-type="submit" style="display: block; position: absolute;bottom: 0; left: 50%;transform: translate(-50%, -1350%);" size="mini">
+      <view wx:if="{{passwordView}}" style="text-align:center">
+        <i-input value="" type="password" name="newPassword" title="新密码" placeholder="请输入密码" maxlength="15"/>
+        <i-input value="" type="password" name="affirmPassword" title="确认密码" placeholder="请输入确认密码" maxlength="15"/>
+      <button type="primary" form-type="submit" size="mini">
           保存
       </button>
      </view>
     </form>
 </i-cell-group>
    <button bindtap="handleClick" style="display: block; position: absolute;bottom: 0; left: 50%;transform: translate(-50%, -210%);" type="warn">退出登录</button>
-
+ <i-toast id="toast" />
    <i-tab-bar current="{{current}}" color="#f759ab" fixed="true"  bindchange="handleChange" >
       <i-tab-bar-item  key="tosignup" icon="brush" size="45" current-icon="brush_fill" title="报名"></i-tab-bar-item>
       <i-tab-bar-item  key="theReservationList" icon="activity"  size="45" current-icon="activity_fill" title="预约列表"></i-tab-bar-item>
