--- a/pages/theReservationList/theReservationList.wxml
+++ b/pages/theReservationList/theReservationList.wxml
@@ -9,7 +9,7 @@
         </view>
     </i-card>
 </view>
- <i-tab-bar current="{{current}}" color="#f759ab" fixed="true"  bindchange="handleChange" >
+ <i-tab-bar current="{{current}}"  fixed ="true" color="#f759ab" bindchange="handleChange" >
       <i-tab-bar-item  key="tosignup" icon="brush" size="45" current-icon="brush_fill" title="报名"></i-tab-bar-item>
       <i-tab-bar-item  key="theReservationList" icon="activity"  size="45" current-icon="activity_fill" title="预约列表"></i-tab-bar-item>
       <i-tab-bar-item   key="classInfo" icon="homepage"  size="45" current-icon="homepage_fill" title="分班信息"></i-tab-bar-item>
